Updated retina drop shadow fix/hack and increased contrast of shadow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -398,8 +398,8 @@ table.plain {
 	.home-template .blog-logo img,
 	.archive-template .blog-logo img,
 	.tag-template .blog-logo img {
-		filter: drop-shadow(0 0 2em rgba(0, 0, 0, 0.25));
-		transform: translateZ(0); // A little hack that makes the image look crisp on HiDPI Displays: http://creativeandcode.com/fix-css-filters-creating-blurry-images-on-retina/
+		filter: drop-shadow(0 0 20px rgba(0, 0, 0, 0.35));
+		backface-visibility: hidden; // A little hack that makes the image look crisp on HiDPI Displays: http://creativeandcode.com/fix-css-filters-creating-blurry-images-on-retina/
 		margin-top: 0;
 	}
 
